--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,37 @@
 <header id="store">
   <h1>Greengrocers</h1>
-  <!-- your store here -->
+  <ul class="item-list store--item-list">
+    <li *ngFor="let item of groceries">
+      <div class="store--item-icon">
+        <img [src]="'assets/icons/' + item.id +'.svg'" [alt]="item.name" />
+      </div>
+      <button (click)="addToCart(item)">Add to cart</button>
+    </li>
+  </ul>
 </header>
 <main id="cart">
   <h2>Your Cart</h2>
-  <!-- your cart here -->
-  <!-- your total here -->
+  <div class="cart--item-list-container">
+    <ul class="item-list cart--item-list">
+      <li>
+        <img
+          class="cart--item-icon"
+          src="assets/icons/001-beetroot.svg"
+          alt="beetroot"
+        />
+        <p>beetroot</p>
+        <button class="quantity-btn remove-btn center">-</button>
+        <span class="quantity-text center">1</span>
+        <button class="quantity-btn add-btn center">+</button>
+      </li>
+    </ul>
+  </div>
+
+  <div>
+  <h3>Total</h3>
+</div>
+
+<div>
+  <span class="total-number">£0.00</span>
+</div>
 </main>
